Compilation_Racket_Mips/piton/tests/errors/no_body_while.py
while True:
print_int(1)